<resources>
    <string name="app_name">olx</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="moibandangnhaptaikhoan">Mời bạn đăng nhập tài khoản</string>
    <string name="fullname">Họ và tên</string>
    <string name="login">Đăng nhập</string>
    <string name="default_web_client_id">187373012888-74gcasa1efvs4rtm9qskvk8e4o1oa382.apps.googleusercontent.com</string>
    <string name="google_map_api_key">AIzaSyD6FTY0uouVN7JITQmVuiJ9_sBwRhpyPnA</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>