<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/toolbarTitleTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/red"
            android:text="@string/dangnhap" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorgray"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profileIv"
            android:layout_centerHorizontal="true"
            android:background="@color/colorgray"
            android:src="@drawable/olx_trangbia"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"/>

        <TextView
            android:id="@+id/loginLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/moibandangnhaptaikhoan"
            android:layout_marginTop="10dp"
            android:layout_below="@id/profileIv"
            style="@style/TextAppearance.AppCompat.Body1"/>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/loginLabelTv"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:startIconDrawable="@drawable/ic_email"
            android:hint="@string/email">
            <EditText
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEt"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:layout_below="@id/emailTil"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:startIconDrawable="@drawable/ic_password"
            app:passwordToggleEnabled="true"
            android:hint="@string/matkhau">
            <EditText
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/passwordEt"
                android:inputType="numberPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noLoginSellerTv"
            android:layout_below="@+id/passwordTil"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="Bạn chưa có tài khoản người bán?Đăng ký"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noLoginUserTv"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="5dp"
            android:layout_below="@id/noLoginSellerTv"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="Bạn chưa có tài khoản người mua?Đăng ký"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noPasswordTv"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="5dp"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="Quên mật khẩu?"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:contentPadding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_users"
                android:drawablePadding="10dp"
                android:text="@string/login"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</RelativeLayout>